--- a/projektzal/Makefile
+++ b/projektzal/Makefile
@@ -13,14 +13,14 @@ help:
 	@echo "\tmake life: compiling the project with life as executable file"
 	@echo "\tmake clean: removing all object and executable files"
 
-life: life_main.o validate_user_input.o print_matrix.o generate_next_state.o count_neighbours.o
-	$(CC) $(CFLAGS) -o $(TARGET) life_main.o validate_user_input.o print_matrix.o generate_next_state.o count_neighbours.o
+life: life_main.o validate_user_input.o print_matrix.o generate_next_state.o count_neighbours.o check_geometry.o
+	$(CC) $(CFLAGS) -o $(TARGET) life_main.o validate_user_input.o print_matrix.o generate_next_state.o count_neighbours.o check_geometry.o header.h
 
 life_main.o: life_main.c
 	$(CC) $(CFLAGS) -c life_main.c
 
 validate_user_input.o: validate_user_input.c
-	$(CC) $(CFLAGS) -c validate_user_input.c
+	$(CC) $(CFLAGS) -c validate_user_input.c header.h
 
 print_matrix.o: print_matrix.c
 	$(CC) $(CFLAGS) -c print_matrix.c
@@ -30,6 +30,9 @@ generate_next_state.o: generate_next_state.c
 
 count_neighbours.o: count_neighbours.c
 	$(CC) $(CFLAGS) -c count_neighbours.c
+
+check_geometry.o: check_geometry.c
+	$(CC) $(CFLAGS) -c check_geometry.c header.h
 
 clean:
 	$(RM) *.o $(TARGET) 
